tests/parser/parse-expression.2.bad.error
error: Malformed expression
  --> test:4:10
   |
 4 |  (define x (f . x))
   |            ^^^^^^^ unexpected dotted list
