tests/parser/parse-expression.2.bad.coalton
;; BAD: Parse Expression
(package test-package)

(define x (f . x))
